performance improvement and file type detection